# vaxmodel

./: README.md  pyproject.toml
vaxmodel/: two_epitope.py
