[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaxmodel"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
numpy = "*"

[tool.pixi.pypi-dependencies]
vaxmodel = { path = ".", editable = true }

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "ipykernel",
  "jupyter_bokeh",
  "pip",
]

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
test = "pytest"

[tool.setuptools.packages.find]
include = ["vaxmodel*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "D"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
